--- a/frontend/package.json
+++ b/frontend/package.json
@@ -11,6 +11,7 @@
   },
   "proxy": "http://localhost:5001",
   "dependencies": {
+    "@fortawesome/fontawesome-free": "^6.7.2",
     "@react-spring/web": "^9.7.5",
     "axios": "^1.7.9",
     "bcryptjs": "^3.0.2",
